--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ sudo: false
 android:
   components:
     - tools
-    - build-tools-29.0.0
-    - android-29
+    - build-tools-28.0.3
+    - android-28
     - extra-android-m2repository
     - extra-android-support
   licenses:
@@ -18,6 +18,8 @@ before_install:
   - mkdir "$ANDROID_HOME/licenses" || true
   - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
   - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+  - yes | sdkmanager --update
+  - yes | sdkmanager --licenses
 
 script:
   - ./gradlew assembleRelease
