--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,13 @@ before_install:
 
 script:
   - ./gradlew assembleRelease
+  
+deploy:
+  provider: releases
+  skip_cleanup: true
+  api_key: $GH_TOKEN
+  file_glob: true
+  file:
+    - "app/build/outputs/apk/release/app-release-unsigned.apk"
+  on:
+    tags: true
