--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ script:
 deploy:
   provider: releases
   skip_cleanup: true
+  api_key: $GH_TOKEN
   file_glob: true
   file:
     - "app/build/outputs/apk/release/app-release-unsigned.apk"
